--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,8 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"dev": "node --watch index.js",
-		"start": "node index.js"
+		"dev": "node --env-file=.env --watch index.js",
+		"start": "node --env-file=.env index.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -14,6 +14,7 @@
 	"packageManager": "pnpm@10.16.1",
 	"dependencies": {
 		"cors": "^2.8.5",
-		"express": "^5.1.0"
+		"express": "^5.1.0",
+		"pg": "^8.16.3"
 	}
 }
