Implement db setup

--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
+		"idb": "node src/init.js",
 		"dev": "node --env-file=src/.env --watch src/index.js",
 		"start": "node --env-file=src/.env src/index.js"
 	},
